--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,23 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
+        "mondago/laravel-application-insights": "^0.7.0",
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/mondago/ApplicationInsights-PHP"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/mondago/laravel-azure-application-insights"
+        }
+    ],
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
@@ -62,6 +73,7 @@
             "php-http/discovery": true
         }
     },
+
     "minimum-stability": "stable",
     "prefer-stable": true
 }
